# frtosSim

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
executableExamples/: CMakeLists.txt
executableExamples/halfSecond/: CMakeLists.txt  main.cpp
executableExamples/infinite/: main.cpp
executableExamples/output/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.h
src/common/: CMakeLists.txt  common.cpp  common.h  fileWork.cpp  fileWork.h  initializable.cpp  initializable.h  time_sv.cpp  time_sv.h
src/config/: CMakeLists.txt  buildConfig.cpp  buildConfig.h  config.cpp  config.h  loggerConfig.cpp  loggerConfig.h  simulatorConfig.cpp  simulatorConfig.h  systemConfig.cpp  systemConfig.h
src/logging/: CMakeLists.txt  loggable.cpp  loggable.h  logger.cpp  logger.h
src/task/: CMakeLists.txt  buildTask.cpp  buildTask.h  myPipe.cpp  myPipe.h  myProcess.cpp  myProcess.h  simulatorTask.cpp  simulatorTask.h  taskInterface.cpp  taskInterface.h
src/thread/: CMakeLists.txt  threadInterface.cpp  threadInterface.h
test/: CMakeLists.txt  main.cpp
test/data/buildConfig/: badFile.json  badName.json  build.json
test/data/buildTask/: build.json  buildBadMake.json  buildEcho.json  buildGoodMake.json  buildLong.json  echo.mk  good.mk  long.mk
test/data/logger/: fileLog.json  fileLogNorm.json
test/data/logger/fakeSim/: sim1.json  sim2.json
test/data/loggerConfig/: badFileLog.json  consoleLog.json  fileLog.json
test/data/simulatorConfig/: BadInterfaces.json  goodSim.json  noInterfaces.json  notFullSim.json
test/data/simulatorTask/: goodOutputTask.json  goodSimTask.json  infiniteTask.json  simGood.json
test/data/systemConfig/: SystemEmpty.json  SystemGood.json  SystemMany.json
test/src/: buildConfig_tests.cpp  buildTask_tests.cpp  common_tests.cpp  conceptTask_tests.cpp  config_tests.cpp  connectionTypes_tests.cpp  initializable_tests.cpp  json_tests.cpp  loggerConfig_tests.cpp  logger_tests.cpp  simulatorConfig_tests.cpp  simulatorTask_tests.cpp  systemConfig_tests.cpp  time_sv_tests.cpp
testExecutables/: CMakeLists.txt
testExecutables/infinite/: CMakeLists.txt  main.cpp
testExecutables/output/: main.cpp
